--- a/CSS/240403_style.css
+++ b/CSS/240403_style.css
@@ -1,36 +1,27 @@
 
-div{border:10px pink solid}
+  div {
+    border: 10px solid green;
+    font-size: 60px;
+  }
 
 
-
-h1 , a {
-/* 한줄표기 */
-    border: 5px solid red ;
-padding-left: 30px;
-padding-right: 30px;
-padding-top: 30px;
-padding-bottom: 30px;
-
-padding: 10px 20px 30px 40px;
-
-margin: 40px;
-
-<style>
-    h1 {
-        font-size: 45px;
-        text-align: center;
-        border-bottom: 1px solid gray;
+  @media(min-width: 800px){
+    div {
+      display: none;
     }
-</style>
+  }
+
+  @media screen and (min-width: 800px){
+    body {
+      background: url(../7.jpg) no-repeat fixed;
+      background-size: cover;
+    }
+  }
 
 
-/*     h1 , a {
-      border-width: 5px;
-      border-color: red;
-      border-style: solid;
-    
-    } */
-    /* display: inline; */
-}
-
-
+  @media screen and (min-width: 1200px){
+    body {
+      background: url(../8.jpg) no-repeat fixed;
+      background-size: cover;
+    }
+  }
