--- a/CSS/gridtest.css
+++ b/CSS/gridtest.css
@@ -8,26 +8,26 @@ body {
 
 h1 {
   color: blue;
-  font-size: 1.5em;
+  font-size: 1em;
   text-align: center;
   border-bottom: 1px gray solid;
-  margin: 0;
+  margin: 0px;
 }
 
 /* 순서3, css 파일에서, grid 옵션 작업.  */
 #grid {
   display: grid;
-  grid-template-columns: 150px 1fr;
+  grid-template-columns: 200px 1fr;
 }
 
 #grid ol {
-  padding-left: 30px;
+  padding-left: 50px;
 }
 
 ol {
   border-right: 1px solid gray;
-  width: 100px;
-  margin: 0;
+  width: 200px;
+  margin: 10px;
   padding: 20px;
 }
 
@@ -41,7 +41,7 @@ a {
 
 
 #article {
-  padding-left: 20px;
+  padding-left: 50px;
 }
 
 
