--- a/CSS/gridtest.css
+++ b/CSS/gridtest.css
@@ -315,3 +315,84 @@ button:hover {
 }
 
 #night_day { margin-left:15px}
+
+
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+}
+
+.container3 {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
+
+.container form {
+  width: 300px;
+  background-color: #fff;
+  padding: 3px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.form-group1 {
+  margin-bottom: 20px;
+}
+
+.form-group2 {
+  margin-bottom: 20px;
+}
+
+.form-group3 {
+  margin-bottom: 20px;
+}
+
+.form-group4 {
+  margin-bottom: 20px;
+}
+
+.form-group5 {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #666;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"],
+input[type="time"] {
+  width: calc(100% - 22px);
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  background-color: #4285f4;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #3c78d8;
+}
+
+
