--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,69 +1,49 @@
-/* #test{
-    color:rgb(0, 0, 0);
-}
-
-h1 {
-    color:rgb(0, 0, 0);
-    font-size: 3em;
-    text-align: center;
-}
-
-a {
-    color:rgb(0, 0, 0);
-    text-decoration: line-through;
-}
-
-#active{
-    color:red ;
-}
-
-.saw{
-    color :rgb(42, 157, 165);
-}
- */
-h1 {
-    color: blue;
-    font-size: 1.5em;
-    text-align: center;
-    border-bottom: 1px gray solid;
+body {
+    font-family: Arial, sans-serif;
     margin: 0;
+    padding: 0;
 }
 
-
-
-ol {
-    border-right: 1px solid gray;
-    width: 100px;
-}
-
-#grid {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-#grid ol {
-    padding-left: 30px;
-}
-
-ol {
-    border-right: 1px solid gray;
-    width: 100px;
-    margin: 0;
+.container {
+    max-width: 600px;
+    margin: 50px auto;
     padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 5px;
 }
 
-
-
-a {
-    color: black;
-    text-decoration: none;
+h1 {
+    text-align: center;
 }
 
-#active {
-    color: red;
-
+.form-group {
+    margin-bottom: 20px;
 }
 
-.saw {
-    color: blueviolet;
+label {
+    display: block;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="date"] {
+    width: 90%;
+    padding: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
 }
