--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
 }
 
-.container {
+.container01 {
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
@@ -12,7 +12,7 @@ body {
     border-radius: 5px;
 }
 
-h1 {
+#h01 {
     text-align: center;
 }
 
@@ -29,7 +29,7 @@ input[type="text"],
 input[type="email"],
 input[type="tel"],
 input[type="date"] {
-    width: 90%;
+    width: 100%;
     padding: 30px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -50,4 +50,56 @@ button:hover {
 
 .oven{
     width:1200px;
+}
+
+
+
+
+/* styles.css */
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #4285F4;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+main {
+    padding: 20px;
+}
+/* 
+footer {
+    background-color: #4285F4;
+    color: #fff;
+    padding: 10px 20px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+} */
+
+.container02 {
+    max-width: 800px;
+    margin: auto;
+}
+
+.review {
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.review h3 {
+    color: #4285F4;
+}
+
+.author {
+    color: #666;
+    font-size: 14px;
 }
